--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="bacground-color work-sans-font">
+    <header class="background-color work-sans-font">
         <nav class="header-container flex">
             <div class="heading-left-side ">
                 <h3 class="heading-class dark1-color">G3 Architects</h3>
@@ -37,7 +37,7 @@
 
     </header>
     <main>
-        <section class="featues flex work-sans-font">
+        <section class="features flex work-sans-font">
             <div class="teams-img">
                 <img class="feature-img" src="./images/team1.png" alt="">
                 <img class="feature-img" src="./images/team2.png" alt="">
@@ -45,8 +45,8 @@
                 <img class="feature-img" src="./images/team4.png" alt="">
             </div>
             <div class="features-content">
-                <h3 class="feature-heading"><span class="quick-list">Quick list</span> of Our<br><span class="features-span">Features</span></h3>
-               <p>There are many variations of passages of Lorem Ipsum available, 
+                <h3 class="feature-heading "><span class="quick-list dark3-color">Quick list</span> of Our<br><span class="features-span">Features</span></h3>
+               <p class="feature-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, 
                 but the majority have suffered alteration in some form, by injected humour, 
                 or randomised words which don't look even</p>
                 <button class="primary-btn">Explore More</button>
