Add different features section and styled it

--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
                 <button class="primary-btn">Explore More</button>
             </div>
         </section>
+
+        <section class="different-features flex work-sans-font">
+           <div class="card-and-title-container">
+                <h3 class="feature-section-title">Features you will love & enjoy</h3>
+                 <p class="feature-section-paragraph dark3-color ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                    by injected humour, or randomised words which don't look even
+                 </p>
+
+            
+                 <div class="feature-card">
+                    <h3 class="card-title dark1-color">Dexktop & Mobile Version</h3>
+                    <p class="card-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h3 class="card-title dark1-color">Drag & Drop Builder</h3>
+                    <p class="card-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h3 class="card-title dark1-color">Awesome Modern Design</h3>
+                    <p class="card-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h3 class="card-title dark1-color">Super Easy to Edit</h3>
+                    <p class="card-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+
+                
+            </div>
+            <div class="different-features-img">
+                    <img class="architect-img" src="./images/architect.png" alt="">
+                    <button class=" diffrent-features-btn primary-btn"><span class="experience-span">10+Year</span><br>Experience</button>
+            </div>
+        </section>
     </main>
     <footer>
 
