Add facts section and styled it

--- a/index.html
+++ b/index.html
@@ -85,6 +85,34 @@
                     <button class=" diffrent-features-btn primary-btn"><span class="experience-span">10+Year</span><br>Experience</button>
             </div>
         </section>
+
+        <section class="facts work-sans-font">
+            <h3 class="facts-heading dark1-color">Some Facts</h3>
+            <p class="facts-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="facts-card">
+                    <img class="fact-img" src="./images/icons/ribon.png" alt=""><br>
+                    <span class="fact-span dark2-color">54</span><br>
+                    <p class="fact-paragraph dark3-color">Awards Winnings</p>
+                </div>
+                <div class="facts-card">
+                    <img class="fact-img" src="./images/icons/projects.png" alt=""><br>
+                    <span class="fact-span dark2-color">1458</span><br>
+                    <p class="fact-paragraph dark3-color ">Project Finished</p>
+                </div>
+                <div class="facts-card">
+                    <img class="fact-img" src="./images/icons/customers.png" alt=""><br>
+                    <span class="fact-span dark2-color">590</span><br>
+                    <p class="fact-paragraph dark3-color">Clients Worked</p>
+                </div>
+                <div class="facts-card">
+                    <img class="fact-img" src="./images/icons/email.png" alt=""><br>
+                    <span class="fact-span dark2-color">22578</span><br>
+                    <p class="fact-paragraph dark3-color">Email Send</p>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
