--- a/index.html
+++ b/index.html
@@ -113,6 +113,22 @@
             </div>
         </section>
 
+        <section class="sponsors work-sans-font">
+            <div class="our-sponsors">
+                <h3 class="sponsor-heading dark1-color">Our Sponspors</h3>
+                <p class="sponsor-paragraph dark3-color">There are many variations of passages of Lorem Ipsum available, but<br> the majority have suffered alteration.</p>
+            </div>
+
+            <div class="sponsors-img">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+                
+            </div>
+        </section>
+
     </main>
     <footer>
 
