Add footer section  and styled it

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 
     </main>
     <footer>
-
+        <section class="footer work-sans-font ">
+            <p class="footer-paragraph">All rights reserved copyright@2025 responsive landing page design</p>
+        </section>
     </footer>
 </body>
 </html>
